fix rare bug and update scrollbar

--- a/common/floating_tools/floating_tools.css
+++ b/common/floating_tools/floating_tools.css
@@ -7,6 +7,7 @@
     right: 20px;
     box-shadow: 0 2px 10px 1px black;
     transition: ease-out 500ms;
+    z-index: 100;
 }
   
 .toolButton:hover {
