--- a/projects/vocab/stylesheets_vocab/commonStyleSheet.css
+++ b/projects/vocab/stylesheets_vocab/commonStyleSheet.css
@@ -8,7 +8,7 @@ header {
   display: flex;
   /*background: rgb(156, 172, 247);*/
   background-size: cover;
-  background: url("../../res/img_vocab/illust_69147540_20181022_231432.jpeg") fixed -150px -300px;
+  background: url("../img_vocab/illust_69147540_20181022_231432.jpeg") fixed -150px -300px;
   padding: 160px 0;
   justify-content: center;
   align-items: center;
